RESOLVED FIXED100983
[EFL][WK2][AC] Wrong translation of mouse events
https://bugs.webkit.org/show_bug.cgi?id=100983
Summary [EFL][WK2][AC] Wrong translation of mouse events
Yael
Reported 2012-11-01 13:33:11 PDT
Translation of mouse events does not take the url bar into account correctly. To reproduce this error: 1. load the page www.aldaily.com 2. make the viewport narrower 3. scroll down 4. use the mouse to select text You will observe that the text selection is bellow where the mouse is. If you extend the width of the viewport until the scale factor becomes 1, and then the selection starts at the correct row. Tested with r133214.
Attachments
Patch (1.76 KB, patch)
2012-11-01 18:08 PDT, Yael
no flags
Patch (1.59 KB, patch)
2012-11-02 05:01 PDT, Yael
no flags
Yael
Comment 1 2012-11-01 18:08:55 PDT
Kenneth Rohde Christiansen
Comment 2 2012-11-02 02:10:23 PDT
Comment on attachment 171962 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171962&action=review > Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:211 > > - transform.translate(-smartData->view.x, -smartData->view.y); > - > #if USE(TILED_BACKING_STORE) > + transform.translate(-smartData->view.x / impl->pageViewportControllerClient()->scaleFactor(), -smartData->view.y / impl->pageViewportControllerClient()->scaleFactor()); > IntPoint scrollPos = impl->pageViewportControllerClient()->scrollPosition(); > transform.translate(scrollPos.x(), scrollPos.y()); > transform.scale(1 / impl->pageViewportControllerClient()->scaleFactor()); > +#else > + transform.translate(-smartData->view.x, -smartData->view.y); > #endif why not just translate it after the scale is applied. That would turn the #else into an #endif
Yael
Comment 3 2012-11-02 05:01:17 PDT
Created attachment 172043 [details] Patch Address comment #2.
Kenneth Rohde Christiansen
Comment 4 2012-11-02 05:16:44 PDT
Comment on attachment 172043 [details] Patch Much better! :-)
Yael
Comment 5 2012-11-02 08:10:25 PDT
Yael
Comment 6 2012-11-02 08:10:50 PDT
Comment on attachment 172043 [details] Patch Clearing flags.
Note You need to log in before you can comment on or make changes to this bug.