[EFL][WK2][AC] Wrong translation of mouse events https://bugs.webkit.org/show_bug.cgi?id=100983

Reviewed by Kenneth Rohde Christiansen.

The transform that we build for mouse events is scaled by the scale factor.
The url bar should not be scaled, so it should be scaled in the oposite
direction to compensate for that.

* UIProcess/API/efl/ewk_view.cpp:
(toWebContentTransform):



Canonical link: https://commits.webkit.org/119150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133297 268f45cc-cd09-0410-ab3c-d52691b4dbfc